# squiid-calculator

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  changelog.md  comm_prot.md  cross_compiling.md  messages.txt  mkdocs.yml  release_checklist.md  squiid_0.1.0.orig.tar.xz  terribleRpnFrontend.py
.cargo/: config.toml
.gitlab/ci/: deploy.yml
.gitlab/issue_templates/: Bug Report.md  Documentation.md  Feature Request.md  Support Request.md
.gitlab/merge_request_templates/: Merge Request.md
branding/: squiid.icns
docs/: comm_prot.md  cross_compiling.md  engine.md  getting_started.md  index.md  parser.md  requirements.txt  style.css
docs/dev/: adding_ipc_backend.md  comm_prot.md  configuration_protocol.md  cross_compiling.md  engine.md  parser.md
docs/user/: constants.md  input_modes.md  negative_numbers.md  previous_answer.md  variables.md
docs/user/commands/functions/: abs.md  clear.md  purge.md  quit.md  round.md  sqrt.md
docs/user/commands/internal-funcs/: invstore.md
docs/user/commands/logic/: egt.md  elt.md  eq.md  geq.md  gt.md  leq.md  lt.md
docs/user/commands/logs/: blog.md  ln.md  log.md  logb.md
docs/user/commands/operations/: add.md  divide.md  mod.md  multiply.md  power.md  subtract.md
docs/user/commands/rpn/: chs.md  clear.md  drop.md  dup.md  invert.md  redo.md  rolldown.md  rollup.md  store.md  swap.md  undo.md
docs/user/commands/trig/: acos.md  asin.md  atan.md  cos.md  cot.md  csc.md  sec.md  sin.md  tan.md
squiid-engine/: Cargo.toml  LICENSE  README.md  engine-putter-inner.py
squiid-engine/src/: bucket.rs  command_mappings.rs  config.toml  config_handler.rs  crash_reporter.rs  engine.rs  exposed.rs  ffi.rs  lib.rs  protocol.rs  stackable_items.rs  utils.rs
squiid-engine/src/ipc/: mod.rs  nng.rs
squiid-engine/src/protocol/: client_request.rs  server_response.rs
squiid-engine/tests/: bucket_tests.rs  command_conflicts.rs  engine_tests.rs  utils_tests.rs
squiid-parser/: Cargo.toml  test.py
squiid-parser/src/: exposed.rs  ffi.rs  lex.rs  lexer.rs  lib.rs  lib.rs.old  main.rs  parser.rs  tokens.rs  utils.rs
squiid-parser/tests/: lexer_tests.rs  parser_tests.rs  tests.rs  token_tests.rs
src/: app.rs  config.toml  config_handler.rs  config_utils.rs  engine.rs  main.rs  protocol.rs  utils.rs
~/winget-pkgs/manifests/i/imaginaryinfinity/Squiid/1.0.0/: ImaginaryInfinity.Squiid.yaml
