[package]
name = "squiid"
version = "0.1.0"
edition = "2021"
description = "Squiid is a modular calculator written in Rust. It is currently very early in development but it is intended to be the successor to ImaginaryInfinity Calculator"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid"
license = "GPL-3.0"
authors = ["Connor Sample <tabulatejarl8@gmail.com>", "Finian Wright <turbowafflz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
lazy_static = "1.4.0"
ratatui = "0.20.1"
squiid-engine = { path="./squiid-engine" }
squiid-parser = { path="./squiid-parser" }
unicode-width = "0.1.10"
zmq = "0.10.0"

[profile.release]
strip = true
lto = true
