[package]
name = "squiid"
version = "0.1.0"
edition = "2021"
description = "Squiid is a modular calculator written in Rust. It is currently very early in development but it is intended to be the successor to ImaginaryInfinity Calculator"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid"
license = "GPL-3.0"
authors = ["Connor Sample <tabulatejarl8@gmail.com>", "Finian Wright <turbowafflz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dirs = "5.0.0"
lazy_static = "1.4.0"
nng = "1.0.1"
ratatui = "0.20.1"
serde = { version = "1.0.159", features = ["derive"] }
squiid-engine = { path="./squiid-engine" }
squiid-parser = { path="./squiid-parser" }
toml = "0.7.3"
unicode-width = "0.1.10"

[profile.release]
strip = true
lto = true
