[package]
name = "squiid"
version = "1.0.5"
edition = "2021"
description = "Squiid is a modular calculator written in Rust. It is currently very early in development but it is intended to be the successor to ImaginaryInfinity Calculator"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid"
license = "GPL-3.0"
authors = ["Connor Sample <tabulatejarl8@gmail.com>", "Finian Wright <turbowafflz@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["cargo"] }
crossterm = "0.26.1"
directories = "5.0.1"
lazy_static = "1.4.0"
nng = "1.0.1"
ratatui = "0.20.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
squiid-engine = { path="./squiid-engine" }
squiid-parser = { path="./squiid-parser" }
toml = "0.7.3"
unicode-width = "0.1.10"

[build-dependencies]
winresource = "0.1.15"

[profile.release]
strip = "symbols"
lto = true
