[package]
name = "squiid-engine"
version = "0.1.0"
description = "This repository contains the RPN (postfix) evaluation engine that is used in Squiid Calculator"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid-parser"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.10.0"

[profile.release]
strip = true
lto = true

[lib]
name = "squiid_engine"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

# example binary stuff
[[bin]]
name = "engine_example"
path = "src/main.rs"
