[package]
name = "squiid-engine"
version = "0.1.0"
description = "This repository contains the RPN (postfix) evaluation engine that is used in Squiid Calculator"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid-parser"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nng = "1.0.1"
regex = "1.7.3"
rust_decimal = { version = "1.29.1", features = ["maths"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[profile.release]
strip = true
lto = true

[lib]
name = "squiid_engine"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

# example binary stuff
[[bin]]
name = "squiid_engine_bin"
path = "src/main.rs"
