[package]
name = "squiid-parser"
version = "1.1.0"
description = "This repository contains the algebraic expression parser for the Squiid Calculator. The parser is implemented using a version of the Shunting-Yard Algorithm"
repository = "https://gitlab.com/ImaginaryInfinity/squiid-calculator/squiid-parser"
license = "GPL-3.0"
authors = ["Connor Sample <tabulatejarl8@gmail.com>", "Finian Wright <turbowafflz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true

[lib]
name = "squiid_parser"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

# example binary stuff
[[bin]]
name = "parser_example"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
log = "0.4.20"
rustyline = { version = "14.0.0", optional = true }
env_logger = { version = "0.11.1", optional = true }
logos = "0.14.1"

[features]
bin = ["dep:rustyline", "dep:env_logger"]
